--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,30 @@
           </excludes>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jaxb2-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>xjc</id>
+            <goals>
+              <goal>xjc</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <sources>
+            <source>
+              ${project.basedir}/src/main/resources/xsd
+            </source>
+          </sources>
+          <outputDirectory>${project.build.directory}/generated-sources/annotations</outputDirectory>
+        </configuration>
+      </plugin>
+
     </plugins>
     <finalName>Rest</finalName>
   </build>
