add xml_response col

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ jdbc.password=1234
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 hibernate.show_sql=true
+
+
+server.port=8081
+soap.uri=http://localhost:8080/service
