--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/jsonList
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.username=postgres
-#spring.datasource.password=1234
 
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/jsonList
@@ -13,4 +9,4 @@ hibernate.show_sql=true
 
 
 server.port=8081
-soap.uri=http://localhost:8080/service
+soap.uri=http://localhost:8080/ws
